--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
+    "@heroicons/react": "^1.0.4",
+    "@tailwindcss/forms": "^0.3.3",
+    "@types/tailwindcss": "^2.2.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -34,6 +38,7 @@
     "@types/react": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
+    "autoprefixer": "^10.3.4",
     "babel-jest": "^27.0.2",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
@@ -43,7 +48,9 @@
     "jest": "^27.0.4",
     "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^10.0.10",
+    "postcss": "^8.3.6",
     "prettier": "^2.0.2",
-    "typescript": "^4.1.3"
+    "tailwindcss": "^2.2.15",
+    "typescript": "^4.4.3"
   }
 }
