--- a/package.json
+++ b/package.json
@@ -23,13 +23,21 @@
     ]
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/react-ssr": "^4.0.0",
+    "@auth0/nextjs-auth0": "^0.16.0",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/forms": "^0.3.3",
     "@types/tailwindcss": "^2.2.1",
+    "apollo-boost": "^0.4.9",
+    "apollo-link-ws": "^1.0.20",
+    "dotenv": "^10.0.0",
+    "graphql": "^15.6.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "subscriptions-transport-ws": "^0.9.19"
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.0",
